[gd_scene load_steps=36 format=3 uid="uid://c1wjuu37hvn4e"]

[ext_resource type="Script" uid="uid://bsg3rufruhqt3" path="res://Scripts/score.gd" id="1_7kmfb"]
[ext_resource type="Texture2D" uid="uid://bbhvvbeectp53" path="res://Asset/graphic/WKRrf_.png" id="2_wok4f"]
[ext_resource type="Texture2D" uid="uid://beyybxqdd7yas" path="res://Asset/graphic/empty_star.png" id="3_5d7hx"]
[ext_resource type="Texture2D" uid="uid://dx6cwixhrb7nb" path="res://Asset/graphic/full_star.png" id="4_bd8jr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b68ub"]
atlas = ExtResource("2_wok4f")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0jl3"]
atlas = ExtResource("2_wok4f")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mcic"]
atlas = ExtResource("2_wok4f")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxwkt"]
atlas = ExtResource("2_wok4f")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6uv"]
atlas = ExtResource("2_wok4f")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_wha7m"]
atlas = ExtResource("2_wok4f")
region = Rect2(0, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_716bn"]
atlas = ExtResource("2_wok4f")
region = Rect2(250, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7542"]
atlas = ExtResource("2_wok4f")
region = Rect2(500, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcktb"]
atlas = ExtResource("2_wok4f")
region = Rect2(750, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdi2u"]
atlas = ExtResource("2_wok4f")
region = Rect2(1000, 250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2svd"]
atlas = ExtResource("2_wok4f")
region = Rect2(0, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ije7e"]
atlas = ExtResource("2_wok4f")
region = Rect2(250, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_acde6"]
atlas = ExtResource("2_wok4f")
region = Rect2(500, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8dh0"]
atlas = ExtResource("2_wok4f")
region = Rect2(750, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hugr"]
atlas = ExtResource("2_wok4f")
region = Rect2(1000, 500, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_umkgj"]
atlas = ExtResource("2_wok4f")
region = Rect2(0, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ru7"]
atlas = ExtResource("2_wok4f")
region = Rect2(250, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv8lm"]
atlas = ExtResource("2_wok4f")
region = Rect2(500, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_58n48"]
atlas = ExtResource("2_wok4f")
region = Rect2(750, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yvx7"]
atlas = ExtResource("2_wok4f")
region = Rect2(1000, 750, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5wj4"]
atlas = ExtResource("2_wok4f")
region = Rect2(0, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pqse"]
atlas = ExtResource("2_wok4f")
region = Rect2(250, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdwdi"]
atlas = ExtResource("2_wok4f")
region = Rect2(500, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dk8c"]
atlas = ExtResource("2_wok4f")
region = Rect2(750, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_w10nk"]
atlas = ExtResource("2_wok4f")
region = Rect2(1000, 1000, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c0dr"]
atlas = ExtResource("2_wok4f")
region = Rect2(0, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoqi6"]
atlas = ExtResource("2_wok4f")
region = Rect2(250, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp0y7"]
atlas = ExtResource("2_wok4f")
region = Rect2(500, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_cow3y"]
atlas = ExtResource("2_wok4f")
region = Rect2(750, 1250, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_edff5"]
atlas = ExtResource("2_wok4f")
region = Rect2(1000, 1250, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_60jxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b68ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0jl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mcic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxwkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wha7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_716bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7542")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcktb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdi2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2svd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ije7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acde6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8dh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hugr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umkgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ru7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv8lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58n48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yvx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5wj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pqse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdwdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dk8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w10nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c0dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoqi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp0y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cow3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edff5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Score" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7kmfb")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 602.625
offset_right = 234.0
offset_bottom = 633.625
theme_override_font_sizes/font_size = 24
text = "Score: 0000"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(97, 551.625)
scale = Vector2(0.333, 0.333)
sprite_frames = SubResource("SpriteFrames_60jxw")
autoplay = "default"

[node name="score_bar" type="Control" parent="."]
anchors_preset = 0
offset_left = 17.0
offset_top = 638.625
offset_right = 57.0
offset_bottom = 678.625
rotation = -1.5708
scale = Vector2(0.7, 0.7)

[node name="Progress" type="ProgressBar" parent="score_bar"]
modulate = Color(0, 0, 1, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -26.0
offset_right = 206.0
offset_bottom = -4.99999
grow_vertical = 0
value = 50.0
show_percentage = false

[node name="ColorRect" type="ColorRect" parent="score_bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_left = 48.0
offset_top = 5.0
offset_right = 47.6
offset_bottom = 32.52

[node name="ColorRect2" type="ColorRect" parent="score_bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_left = 184.0
offset_top = 5.0
offset_right = 183.6
offset_bottom = 32.52

[node name="ColorRect3" type="ColorRect" parent="score_bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_left = 106.0
offset_top = 5.0
offset_right = 105.6
offset_bottom = 32.52

[node name="EmptyStar" type="Sprite2D" parent="score_bar"]
position = Vector2(49, -7)
rotation = 1.5708
texture = ExtResource("3_5d7hx")

[node name="EmptyStar2" type="Sprite2D" parent="score_bar"]
position = Vector2(106, -7)
rotation = 1.5708
texture = ExtResource("3_5d7hx")

[node name="EmptyStar3" type="Sprite2D" parent="score_bar"]
position = Vector2(184, -7)
rotation = 1.5708
texture = ExtResource("3_5d7hx")

[node name="FullStar" type="Sprite2D" parent="score_bar"]
visible = false
position = Vector2(49, -7)
rotation = 1.5708
texture = ExtResource("4_bd8jr")

[node name="FullStar2" type="Sprite2D" parent="score_bar"]
visible = false
position = Vector2(106, -7)
rotation = 1.5708
texture = ExtResource("4_bd8jr")

[node name="FullStar3" type="Sprite2D" parent="score_bar"]
visible = false
position = Vector2(184, -7)
rotation = 1.5708
texture = ExtResource("4_bd8jr")
